<?xml version="1.0"?>
<package>

  <name>rviz_plugins</name>
  <version>0.1.0</version>
  <description>Plugins per rviz</description>
  <author email="stebonicelli@gmail.com">Stefano Bonicelli</author>
  <maintainer email="stebonicelli@gmail.com">Stefano Bonicelli</maintainer>
  <license>CC BY SA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
